--- a/index.html
+++ b/index.html
@@ -31,23 +31,13 @@
             </button>
 
             <div id="minHamburgermenu" class="hamburgermenuen">
-                <a href="index.html" class="hejhjem">Hjem</a>
-                <a href="#girltalk__frivilligeunivers__h2">Vores tilbud</a>
-                <a href="index.html">Støt</a>
+                <a href="designselv.html">Gavekurve</a>
+                <a href="index.html">Sortiment</a>
+                <a href="index.html">Erhverv</a>
                 <a href="index.html">Om os</a>
-                <a href="index.html">Shop</a>
-                
-                <button class="dropdown-knappen">Bliv frivillig </button>
-
-                <div class="dropdown-indhold">
-                    <a href="#girltalk__frivilligeunivers__h2">Bliv ungrådgiver</a>
-                    <a href="#girltalk__frivilligeunivers__h2">Bliv gruppeleder</a>
-                    <a href="#girltalk__frivilligeunivers__h2">Bliv forældrerådgiver</a>
-                    <a href="#girltalk__frivilligeunivers__h2">Hold foredrag</a>
-                </div>
-
+                <a href="index.html">Kontakt</a>
             </div>
-            
+
             <div class="header__top__logo">
                 <img class="top__logo__img" src="billeder/logo__lewira.png" alt="Lewiras logo">
             </div>
