--- a/designselv.html
+++ b/designselv.html
@@ -328,7 +328,9 @@
 
         <div class="img__informations__boks">
           <img class="designselv__udvalg__img" src="billeder/delikatesser/syltede__tomater.webp" alt="syltede tomater">
-          <h3 class="udvalg__img__h3">
+          <h3 class="udvalg__img__h3"> Håndplukkede, økologiske tomater marineret i mild æbleeddike tilsat aromatiske urter som timian og laurbær, en anelse rørsukker og et strejf hvidløg. 
+          <br><br>Resultatet er en sprød, syrlig-sød smagsoplevelse med masser af naturlig tomatsmag 
+          <br><br>– perfekt til salater, tapas eller som tilbehør til ost og kød.
           </h3>
         </div>
 
@@ -776,9 +778,9 @@
           </h3>
         </div>
 
-        <h3 class="designselv__udvalg__h3"></h3>
+        <h3 class="designselv__udvalg__h3">Blød Bamseven</h3>
 
-        <p class="designselv__udvalg__p"></p>
+        <p class="designselv__udvalg__p">199 kr</p>
 
         <div class="udvalg__button__box">
           <button class="designselv__udvalg__button">Tilføj</button>
