js tilføjet til js mappe

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="js/alice.js" defer></script>
     <script src="js/mathilde.js" defer></script>
     <script src="js/kirja.js" defer></script>
-    <script src="footer.js" defer></script>
+    <script src="js/footer.js" defer></script>
 </head>
 <body>
     <header>
