--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <button class="hamburger" onclick="openNav(0)">
         
                 <svg width="40" height="17" viewBox="0 0 55 24" fill="none">              
-                    <rect id="streg_1" width="25" height="3" fill="#273AAA"></rect>         
-                    <rect id="streg_2" y="10" width="25" height="3" fill="#273AAA"></rect>
-                    <rect id="streg_3" y="20" width="25" height="3" fill="#273AAA"></rect>
+                    <rect id="streg_1" width="40" height="2" fill="#210700"></rect>         
+                    <rect id="streg_2" y="11" width="40" height="2" fill="#210700"></rect>
+                    <rect id="streg_3" y="22" width="40" height="2" fill="#210700"></rect>
                 </svg>  <!--størrelsen, højden og farven for mine streger - hamburgermenuen-->  
 
             </button>
@@ -42,7 +42,6 @@
                 <img class="top__logo__img" src="billeder/logo__lewira.png" alt="Lewiras logo">
             </div>
 
-
             <div class="header__mobil__top">
 
                 <div class="header__mobil__ikoner">
@@ -56,6 +55,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
 
 
