--- a/index.html
+++ b/index.html
@@ -262,8 +262,13 @@
         </div>
     </main>
     
-      <!---Alice-->
+    <!---Alice-->
     <footer class="footer">
+
+        <div class="footer__top">
+            <img class="footer__top__img" src="billeder/trustpilot.webp" alt="framragende 4,5 stjerner 572 anmendelser på Trustpolot">
+        </div>
+
         <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
 
         <div class="footer-sektion">
