rettelser af navn

--- a/index.html
+++ b/index.html
@@ -271,48 +271,48 @@
 
         <div class="footer__bottom">
 
-            <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
+        <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
 
-            <div class="footer-sektion">
-                <div class="footer-knap" onclick="toggleCheckbox('girltalk-checkbox')">
-                    <span class="span__knap f">+</span>
-                    <h3 class="kontakt_liwira">Kontakt</h3>
-                </div>
-                <input type="checkbox" id="liwira-checkbox" class="footer-checkbox">
-                <div id="liwira-indhold" class="footer-indhold">
-                    <p>+45 2426 7971</p>
-                    <p>kontakt@dinpejs.dk</p>
-                    <p>Jernbanegade 16, 5550 Langeskov</p>
-                </div>
+        <div class="footer-sektion">
+            <div class="footer-knap" onclick="toggleCheckbox('liwira-checkbox')">
+                <span class="span__knap f">+</span>
+                <h3 class="kontakt_liwira">Kontakt</h3>
             </div>
-        
-            <div class="footer-sektion">
-                <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
-                    <span class="span__knap">+</span>
-                    <h3 class="abningstider_liwira">Åbningstider</h3>
-                </div>
-                <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
-                <div id="follow-indhold" class="footer-indhold">
-                    <ul>
-                        <p>Man-fre 11:00-17:00</p>
-                        <p>Lør 10:00-12:00</p>
-                        <p>Søn lukket</p>
-                    </ul>
-                </div>
+            <input type="checkbox" id="liwira-checkbox" class="footer-checkbox">
+            <div id="liwira-indhold" class="footer-indhold">
+                <p>+45 2426 7971</p>
+                <p>kontakt@dinpejs.dk</p>
+                <p>Jernbanegade 16, 5550 Langeskov</p>
             </div>
-
-            <div class="footer-sektion">
-                <div class="footer-knap" onclick="toggleCheckbox('social-checkbox')">
-                    <span class="span__knap">+</span>
-                    <h3 class="folg_os">Følg os her</h3>
-                </div>
-                <input type="checkbox" id="social-checkbox" class="footer-checkbox">
-                <div id="social-indhold" class="footer-indhold">
-                    <img class="footer_socialemedier" src="billeder/socialemedier.png" alt="liwira_socialemedier">
-                </div>
-            </div>
- 
         </div>
+    
+        <div class="footer-sektion">
+            <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
+                <span class="span__knap">+</span>
+                <h3 class="abningstider_liwira">Åbningstider</h3>
+            </div>
+            <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
+            <div id="follow-indhold" class="footer-indhold">
+                <ul>
+                    <p>Man-fre 11:00-17:00</p>
+                    <p>Lør 10:00-12:00</p>
+                    <p>Søn lukket</p>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-sektion">
+            <div class="footer-knap" onclick="toggleCheckbox('social-checkbox')">
+                <span class="span__knap">+</span>
+                <h3 class="folg_os">Følg os her</h3>
+            </div>
+            <input type="checkbox" id="social-checkbox" class="footer-checkbox">
+            <div id="social-indhold" class="footer-indhold">
+                <img class="footer_socialemedier" src="billeder/socialemedier.png" alt="liwira_socialemedier">
+            </div>
+        </div>
+ 
+    </div>
 
 
     </footer>
