designselv linket till index ved design selv og knappen er opdateret

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     enten en vi har pakket på forhånd eller en, du selv sammensætter. 
                     Vi sørger selvfølgelig for, at den bliver pakket pænt ind og sendt godt afsted.
                 </p>
-                <button class="forside__designselv__button">Design selv</button>
+                <a href="designselv.html" class="forside__designselv__button">Design selv</a>
             </div>
 
             <div class="forside__designselv__video">
