--- a/designselv.html
+++ b/designselv.html
@@ -25,13 +25,14 @@
     <div class="designselv">
 
       <div class="designselv__billede-container">
-        <img src="billeder/liwira gavekurv.webp" alt="Din gavekurv, hvor du kan se, hvad du har lagt i" class="dingavekurv__billede"/>
 
-        <div class="valgte__items" style="display: none;">
-          <img data-billede="billeder/interaktiv/fyldtechoko.webp" data-id="chokolade" class="valgte__items__chokolade" src="billeder/interaktiv/fyldtechoko.webp" alt="fyldte chokolade hjerter">
-          <img data-billede="billeder/interaktiv/kaninbamse.webp" data-id="kanin"  class="valgte__items__kanin" src="billeder/interaktiv/kaninbamse.webp" alt="grå kaninbamse">
-          <img data-billede="billeder/interaktiv/keramikkop.webp" data-id="kop" class="valgte__items__kop" src="billeder/interaktiv/keramikkop.webp" alt="kermik kop i hvid med dryppende blå glasur">
+        <div class="valgte__items">
+          <img data-billede="billeder/interaktiv/fyldtechoko.webp" data-id="chokolade" class="valgte__items__chokolade" src="billeder/interaktiv/fyldtechoko.webp" alt="fyldte chokolade hjerter" style="display: none;">
+          <img data-billede="billeder/interaktiv/kaninbamse.webp" data-id="kanin"  class="valgte__items__kanin" src="billeder/interaktiv/kaninbamse.webp" alt="grå kaninbamse" style="display: none;">
+          <img data-billede="billeder/interaktiv/keramikkop.webp" data-id="kop" class="valgte__items__kop" src="billeder/interaktiv/keramikkop.webp" alt="kermik kop i hvid med dryppende blå glasur" style="display: none;">
         </div>
+
+        <img src="billeder/liwira gavekurv.webp" alt="Din gavekurv, hvor du kan se, hvad du har lagt i" class="dingavekurv__billede"/>
       </div>
 
       <div class="designselv__indhold">
@@ -43,15 +44,15 @@
         <div class="designselv__valgt">
           <h3>DINE VALG</h3>
           <ul class="designselv__items" id="valgteItems">
-            <li class="desinselv__items__li" style="display: none;">
+            <li class="desinselv__items__li" style="display: none;" data-id="chokolade">
               <button class="fjern__button" data-id="chokolade">+ 1 -</button>
             </li>
 
-            <li class="desinselv__items__li" style="display: none;">
+            <li class="desinselv__items__li" style="display: none;" data-id="kanin">
               <button class="fjern__button" data-id="kanin">+ 1 -</button>
             </li>
 
-            <li class="desinselv__items__li" style="display: none;" >
+            <li class="desinselv__items__li" style="display: none;" data-id="kop">
               <button class="fjern__button" data-id="kop">+ 1 -</button>
             </li>
 
