billeder optimeret til webp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="header__top__logo">
-                <img class="top__logo__img" src="billeder/logo__lewira.png" alt="Lewiras logo">
+                <img class="top__logo__img" src="billeder/logo__lewira.webp" alt="Liwiras logo">
             </div>
 
             <div class="header__mobil__top">
@@ -70,7 +70,7 @@
                 <nav class="header__desktop__nav">
                     <ul class="header__desktop__ul">
                         <li class="nav__desktop__dropdown">
-                            <a class="desktop__dropdown__link" href="index.html">Gavekurve <img src="billeder/dropdown__pil.png" alt="pil ned"></a>
+                            <a class="desktop__dropdown__link" href="index.html">Gavekurve <img src="billeder/dropdown__pil.webp" alt="pil ned"></a>
                             <ul class="desktop__dropdown__ul">
                                 <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="design selv.html">Design selv gavekurv</a></li>
                                 <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="sammensatte.html">Sammensatte gavekurve</a></li>
@@ -120,8 +120,8 @@
         </div> 
 
         <div class="hero">
-            <img class="hero__billede__disktop" src="billeder/hero__frontbage__desktop.jpg" alt="billede af to vinglas fyldt med kold æblecider">
-            <img class="hero__billede__mobil" src="billeder/hero__frontpage__mobil.jpg" alt="billede af to vinglas fyldt med kold æblecider">
+            <img class="hero__billede__disktop" src="billeder/hero__frontbage__desktop.webp" alt="billede af to vinglas fyldt med kold æblecider">
+            <img class="hero__billede__mobil" src="billeder/hero__frontpage__mobil.webp" alt="billede af to vinglas fyldt med kold æblecider">
             
             <div class="hero__text">
                 <h1 class="hero__h1">GAVER DER SMAGER, <br> 
@@ -248,7 +248,7 @@
         </div>
 
         <div class="forside__butikken">
-            <img class="forside__butikken__img" src="billeder/forside__butikken.jpg" alt="billede af Lewiras butik med produkter">
+            <img class="forside__butikken__img" src="billeder/forside__butikken.webp" alt="billede af Lewiras butik med produkter">
             <div class="forsiden__butikken__tekst">
                 <h2 class="forside__butikken__h2">NÆRT, LOKALT OG PAKKET MED OMHU</h2>
                 <p class="forside__butikken__p">Vi holder til i Langeskov og går op i det nære,
@@ -271,7 +271,7 @@
 
         <div class="footer__bottom">
 
-        <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
+        <img class="footer_logo" src="billeder/logo__lewira.webp" alt="liwira_logo">
 
         <div class="footer-sektion">
             <div class="footer-knap" onclick="toggleCheckbox('liwira-checkbox')">
@@ -308,7 +308,7 @@
             </div>
             <input type="checkbox" id="social-checkbox" class="footer-checkbox">
             <div id="social-indhold" class="footer-indhold">
-                <img class="footer_socialemedier" src="billeder/socialemedier.png" alt="liwira_socialemedier">
+                <img class="footer_socialemedier" src="billeder/socialemedier.webp" alt="liwira_socialemedier">
             </div>
         </div>
  
