kr ændret til kr.

--- a/designselv.html
+++ b/designselv.html
@@ -100,7 +100,7 @@
 
             <h3 class="designselv__udvalg__h3">Fyldte chokoladerhjerter</h3>
 
-            <p class="designselv__udvalg__p">112 kr</p>
+            <p class="designselv__udvalg__p">112 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button" class="tilfoj-item" data-id="chokolade">Tilføj</button>
@@ -120,7 +120,7 @@
 
             <h3 class="designselv__udvalg__h3">Mørke fyldte chokoladehjerter</h3>
 
-            <p class="designselv__udvalg__p">112 kr</p>
+            <p class="designselv__udvalg__p">112 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -140,7 +140,7 @@
 
             <h3 class="designselv__udvalg__h3">20 Unikke Chokolader</h3>
 
-            <p class="designselv__udvalg__p">148 kr</p>
+            <p class="designselv__udvalg__p">148 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -166,7 +166,7 @@
 
             <h3 class="designselv__udvalg__h3">Fire fyldte chokolader</h3>
 
-            <p class="designselv__udvalg__p">58 kr</p>
+            <p class="designselv__udvalg__p">58 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -188,7 +188,7 @@
 
             <h3 class="designselv__udvalg__h3">Fire Fyldkombinationer</h3>
 
-            <p class="designselv__udvalg__p">58 kr</p>
+            <p class="designselv__udvalg__p">58 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -206,7 +206,7 @@
 
             <h3 class="designselv__udvalg__h3">Chokoladeovertrukket Lakrids</h3>
 
-            <p class="designselv__udvalg__p">65 kr</p>
+            <p class="designselv__udvalg__p">65 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -235,7 +235,7 @@
 
             <h3 class="designselv__udvalg__h3">Dansk honning</h3>
 
-            <p class="designselv__udvalg__p">59 kr</p>
+            <p class="designselv__udvalg__p">59 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -255,7 +255,7 @@
 
             <h3 class="designselv__udvalg__h3">Håndlavet - HYBEN MARMELADE</h3>
 
-            <p class="designselv__udvalg__p">45 kr</p>
+            <p class="designselv__udvalg__p">45 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -274,7 +274,7 @@
 
             <h3 class="designselv__udvalg__h3">Håndlavet - RØDBEDE CHUTNEY</h3>
 
-            <p class="designselv__udvalg__p">45 kr</p>
+            <p class="designselv__udvalg__p">45 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -297,7 +297,7 @@
 
             <h3 class="designselv__udvalg__h3">Håndlavet - SYLTEDE TOMATER</h3>
 
-            <p class="designselv__udvalg__p">45 kr</p>
+            <p class="designselv__udvalg__p">45 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -316,7 +316,7 @@
 
             <h3 class="designselv__udvalg__h3">Nicolas Vahé - SALT & PEPPER</h3>
 
-            <p class="designselv__udvalg__p">75 kr</p>
+            <p class="designselv__udvalg__p">75 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -335,7 +335,7 @@
 
             <h3 class="designselv__udvalg__h3">Nicolas Vahé - OLIVE OIL</h3>
 
-            <p class="designselv__udvalg__p">119 kr</p>
+            <p class="designselv__udvalg__p">119 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -363,7 +363,7 @@
 
             <h3 class="designselv__udvalg__h3">Frisk Hvidvin</h3>
 
-            <p class="designselv__udvalg__p">159 kr</p>
+            <p class="designselv__udvalg__p">159 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -383,7 +383,7 @@
 
             <h3 class="designselv__udvalg__h3">Rig og Fyldig Rødvin</h3>
 
-            <p class="designselv__udvalg__p">179 kr</p>
+            <p class="designselv__udvalg__p">179 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -403,7 +403,7 @@
 
             <h3 class="designselv__udvalg__h3">Frisk & Frugtrig Rosé</h3>
 
-            <p class="designselv__udvalg__p">169 kr</p>
+            <p class="designselv__udvalg__p">169 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -433,7 +433,7 @@
 
             <h3 class="designselv__udvalg__h3">Fyldte chokoladerhjerter</h3>
 
-            <p class="designselv__udvalg__p">59 kr</p>
+            <p class="designselv__udvalg__p">59 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -453,7 +453,7 @@
 
             <h3 class="designselv__udvalg__h3">Gylden Pilsner</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -473,7 +473,7 @@
 
             <h3 class="designselv__udvalg__h3">Fyldte chokoladerhjerter</h3>
 
-            <p class="designselv__udvalg__p">59 kr</p>
+            <p class="designselv__udvalg__p">59 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -501,7 +501,7 @@
 
             <h3 class="designselv__udvalg__h3">Rabarber & Æble Saft</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -521,7 +521,7 @@
 
             <h3 class="designselv__udvalg__h3">Friskpresset Appelsinjuice</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -541,7 +541,7 @@
 
             <h3 class="designselv__udvalg__h3">Jordbærsaft</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -565,7 +565,7 @@
 
             <h3 class="designselv__udvalg__h3">Friskpresset Æblejuice</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -585,7 +585,7 @@
 
             <h3 class="designselv__udvalg__h3">Hyldeblomstsaft</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -605,7 +605,7 @@
 
             <h3 class="designselv__udvalg__h3">Hindbærsaft</h3>
 
-            <p class="designselv__udvalg__p">49 kr</p>
+            <p class="designselv__udvalg__p">49 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -632,7 +632,7 @@
 
             <h3 class="designselv__udvalg__h3">Velvet Chai med Kardemomme & Vanilje</h3>
 
-            <p class="designselv__udvalg__p">99 kr</p>
+            <p class="designselv__udvalg__p">99 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -653,7 +653,7 @@
 
             <h3 class="designselv__udvalg__h3">Sunset Hibiscus & Appelsinskal</h3>
 
-            <p class="designselv__udvalg__p">89 kr</p>
+            <p class="designselv__udvalg__p">89 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -673,7 +673,7 @@
 
             <h3 class="designselv__udvalg__h3">Delicate Rose & Bergamot Tea</h3>
 
-            <p class="designselv__udvalg__p">89 kr</p>
+            <p class="designselv__udvalg__p">89 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -700,7 +700,7 @@
 
             <h3 class="designselv__udvalg__h3">Lyserød kanin i  Økologisk Bomuld</h3>
 
-            <p class="designselv__udvalg__p">279 kr</p>
+            <p class="designselv__udvalg__p">279 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -720,7 +720,7 @@
 
             <h3 class="designselv__udvalg__h3">Grå kanin i Økologisk Bomuld</h3>
 
-            <p class="designselv__udvalg__p">279 kr</p>
+            <p class="designselv__udvalg__p">279 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button" class="tilfoj-item" data-id="kanin">Tilføj</button>
@@ -741,7 +741,7 @@
 
             <h3 class="designselv__udvalg__h3">Blød Bamseven</h3>
 
-            <p class="designselv__udvalg__p">199 kr</p>
+            <p class="designselv__udvalg__p">199 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -768,7 +768,7 @@
 
             <h3 class="designselv__udvalg__h3">Rosa Keramikkrus</h3>
 
-            <p class="designselv__udvalg__p">168 kr</p>
+            <p class="designselv__udvalg__p">168 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -788,7 +788,7 @@
 
             <h3 class="designselv__udvalg__h3">Dråbeglasur Keramikkrus</h3>
 
-            <p class="designselv__udvalg__p">168 kr</p>
+            <p class="designselv__udvalg__p">168 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button" class="tilfoj-item" data-id="kop">Tilføj</button>
@@ -808,7 +808,7 @@
 
             <h3 class="designselv__udvalg__h3">Rustikt Drypglasur Keramikkrus</h3>
 
-            <p class="designselv__udvalg__p">168 kr</p>
+            <p class="designselv__udvalg__p">168 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -832,7 +832,7 @@
 
             <h3 class="designselv__udvalg__h3">Specklet Keramikkrus</h3>
 
-            <p class="designselv__udvalg__p">168 kr</p>
+            <p class="designselv__udvalg__p">168 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -852,7 +852,7 @@
 
             <h3 class="designselv__udvalg__h3">Smaragdgrønt Keramikkrus</h3>
 
-            <p class="designselv__udvalg__p">168 kr</p>
+            <p class="designselv__udvalg__p">168 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
@@ -872,7 +872,7 @@
 
             <h3 class="designselv__udvalg__h3">Drypglasur Keramikkrus</h3>
 
-            <p class="designselv__udvalg__p">168 kr</p>
+            <p class="designselv__udvalg__p">168 kr.</p>
 
             <div class="udvalg__button__box">
               <button class="designselv__udvalg__button">Tilføj</button>
