--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li class="nav__desktop__dropdown">
                             <a class="desktop__dropdown__link" href="index.html">Gavekurve <img src="billeder/dropdown__pil.webp" alt="pil ned"></a>
                             <ul class="desktop__dropdown__ul">
-                                <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="design selv.html">Design selv gavekurv</a></li>
+                                <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="designselv.html">Design selv gavekurv</a></li>
                                 <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="sammensatte.html">Sammensatte gavekurve</a></li>
                             </ul>
                         </li>
@@ -271,48 +271,48 @@
 
         <div class="footer__bottom">
 
-        <img class="footer_logo" src="billeder/logo__lewira.webp" alt="liwira_logo">
+            <img class="footer_logo" src="billeder/logo__lewira.webp" alt="liwira_logo">
 
-        <div class="footer-sektion">
-            <div class="footer-knap" onclick="toggleCheckbox('liwira-checkbox')">
-                <span class="span__knap f">+</span>
-                <h3 class="kontakt_liwira">Kontakt</h3>
+            <div class="footer-sektion">
+                <div class="footer-knap" onclick="toggleCheckbox('liwira-checkbox')">
+                    <span class="span__knap f">+</span>
+                    <h3 class="kontakt_liwira">Kontakt</h3>
+                </div>
+                <input type="checkbox" id="liwira-checkbox" class="footer-checkbox">
+                <div id="liwira-indhold" class="footer-indhold">
+                    <p>+45 2426 7971</p>
+                    <p>kontakt@dinpejs.dk</p>
+                    <p>Jernbanegade 16, 5550 Langeskov</p>
+                </div>
             </div>
-            <input type="checkbox" id="liwira-checkbox" class="footer-checkbox">
-            <div id="liwira-indhold" class="footer-indhold">
-                <p>+45 2426 7971</p>
-                <p>kontakt@dinpejs.dk</p>
-                <p>Jernbanegade 16, 5550 Langeskov</p>
+        
+            <div class="footer-sektion">
+                <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
+                    <span class="span__knap">+</span>
+                    <h3 class="abningstider_liwira">Åbningstider</h3>
+                </div>
+                <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
+                <div id="follow-indhold" class="footer-indhold">
+                    <div>
+                        <p>Man-fre 11:00-17:00</p>
+                        <p>Lør 10:00-12:00</p>
+                        <p>Søn lukket</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    
-        <div class="footer-sektion">
-            <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
-                <span class="span__knap">+</span>
-                <h3 class="abningstider_liwira">Åbningstider</h3>
-            </div>
-            <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
-            <div id="follow-indhold" class="footer-indhold">
-                <ul>
-                    <p>Man-fre 11:00-17:00</p>
-                    <p>Lør 10:00-12:00</p>
-                    <p>Søn lukket</p>
-                </ul>
-            </div>
-        </div>
 
-        <div class="footer-sektion">
-            <div class="footer-knap" onclick="toggleCheckbox('social-checkbox')">
-                <span class="span__knap">+</span>
-                <h3 class="folg_os">Følg os her</h3>
+            <div class="footer-sektion">
+                <div class="footer-knap" onclick="toggleCheckbox('social-checkbox')">
+                    <span class="span__knap">+</span>
+                    <h3 class="folg_os">Følg os her</h3>
+                </div>
+                <input type="checkbox" id="social-checkbox" class="footer-checkbox">
+                <div id="social-indhold" class="footer-indhold">
+                    <img class="footer_socialemedier" src="billeder/socialemedier.webp" alt="liwira_socialemedier">
+                </div>
             </div>
-            <input type="checkbox" id="social-checkbox" class="footer-checkbox">
-            <div id="social-indhold" class="footer-indhold">
-                <img class="footer_socialemedier" src="billeder/socialemedier.webp" alt="liwira_socialemedier">
-            </div>
-        </div>
  
-    </div>
+        </div>
 
 
     </footer>
