billedenavne ændret. og hover fjernet på fjern button

--- a/designselv.html
+++ b/designselv.html
@@ -799,7 +799,7 @@
           <div class="udvalg__informations__boks">
 
             <div class="img__informations__boks">
-              <img class="designselv__udvalg__img" src="billeder/bamser/gråbamse.webp" alt="billede af en grå ganinbamse">
+              <img class="designselv__udvalg__img" src="billeder/bamser/grabamse.webp" alt="billede af en grå ganinbamse">
               <h3 class="udvalg__img__h3">En charmerende, håndsyet kaninbamse i blødt, økologisk bomuld med allergivenligt polyesterfyld.
               Den diskrete grå nuance og det enkle, tidløse design gør den til en tryg lege- og putteven, der passer ind på ethvert børneværelse.
               Maskinvaskbar ved 30 °C for nem rengøring.
@@ -867,7 +867,7 @@
           <div class="udvalg__informations__boks">
 
             <div class="img__informations__boks">
-              <img class="designselv__udvalg__img" src="billeder/kermik/hvid__blå__kop.webp" alt="hvid kop med dryppende blå glasur">
+              <img class="designselv__udvalg__img" src="billeder/kermik/hvid__bla__kop.webp" alt="hvid kop med dryppende blå glasur">
               <h3 class="udvalg__img__h3">Et unikt, håndlavet krus med en smuk turkis glasur, der drypper ned over en naturlig, spraglet stentøjsbund. 
               <br><br>Kruset rummer ca. 300 ml og kombinerer kunsthåndværk med funktionalitet – perfekt til både kaffe, te eller kakao. 
               <br><br>Tåler opvaskemaskine og mikroovn.
