--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
             </div>
 
             <div class="forside__designselv__video">
-                <img class="placeholder__forside__img" src="billeder/placeholder__forside.jpg" alt="">
+                    <video class="placeholder__forside__img" autoplay muted loop>
+                        <source   src="billeder/stopmotion.mp4">
+                    </video>
+                </div>
+            </div>
             </div>
         </div>
 
