--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="index.html">Erhverv</a>
                 <a href="index.html">Om os</a>
                 <a href="index.html">Kontakt</a>
-            </div>
+            </div> <!-- W3school -->
 
             <div class="header__top__logo">
                 <img class="top__logo__img" src="billeder/logo__lewira.webp" alt="Liwiras logo">
