--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="forside__designselv">
             <div class="forside__designselv__tekst">
                 <h2 class="forside__designselv__h2">GAVEKURVE MED PERSONLIGHED</h2>
-                <p class="forside__designselv__p">Hos os finder du gaveidéer med omtanke: <br> delikatesser, kunsthåndværk og interiør samlet i smukke gavekurve. 
+                <p class="forside__designselv__p">Hos os finder du gaveidéer med omtanke: delikatesser, kunsthåndværk og interiør samlet i smukke gavekurve. 
                     Her på siden kan du bestille gavekurve - 
                     enten en vi har pakket på forhånd eller en, du selv sammensætter. 
                     Vi sørger selvfølgelig for, at den bliver pakket pænt ind og sendt godt afsted.
