loop autoplay controls på video forside

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             </div>
 
             <div class="forside__designselv__video">
-                    <video class="placeholder__forside__img" autoplay muted loop>
-                        <source   src="billeder/stopmotion.mp4">
+                    <video class="placeholder__forside__img" loop autoplay controls>
+                        <source src="billeder/stopmotion.mp4">
                     </video>
                 </div>
             </div>
