muted tilføjet til video

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
 
             <div class="forside__designselv__video">
-                    <video class="placeholder__forside__img" loop autoplay controls>
+                    <video class="placeholder__forside__img" loop autoplay muted controls>
                         <source src="billeder/stopmotion.mp4">
                     </video>
             </div>
