--- a/designselv.html
+++ b/designselv.html
@@ -107,6 +107,21 @@
 
   <main>
 
+    <!-- Mathilde --> 
+    <div id="soegBoks" style="display: none;">
+      <button id="lukKnap" onclick="soeFeltIndput()" style="display: none;">x</button>
+      <input id="indputFelt" type="text" placeholder="Hvad leder du efter?" name="soeg" style="display: none;" onkeyup="filterLinks()">
+
+      <ul id="soegeResultater"></ul>
+    </div> 
+
+    <div id="soegBoksDesktop" style="display: none;">
+      <button id="lukKnapDesktop" onclick="soeFeltIndputDesktop()" style="display: none;">x</button>
+      <input id="indputFeltDesktop" type="text" placeholder="Hvad leder du efter?" name="soeg" style="display: none;" onkeyup="filterLinksDesktop()">
+
+      <ul id="soegeResultaterDesktop"></ul>
+    </div> 
+
     <!--Kirja-->
 
     <div class="designselv">
